--- a/chatapp/src/main/resources/application.properties
+++ b/chatapp/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=ChatApp
-
-spring.datasource.url=jdbc:mysql://localhost:3306/chat_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=your_password
-
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.application.name=ChatApp
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/chat_db?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=your_password
+#
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
