--- a/chatapp/src/main/resources/application.yml
+++ b/chatapp/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/chat_db?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/chatapp_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
     password: Asit@577
+  main:
+    allow-circular-reference: ture
 
   jpa:
     hibernate:
@@ -11,3 +13,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+
+
+server:
+  port: 9090
